tests/test54.rael.exp
Error [tests/test54.rael:1:7]: Expected expression
| log 1,
|       ^
